--- a/src/config.zig.in
+++ b/src/config.zig.in
@@ -1,3 +1,5 @@
+pub const have_llvm = true;
 pub const version: []const u8 = "@ZIG_VERSION@";
 pub const log_scopes: []const []const u8 = &[_][]const u8{};
+pub const zir_dumps: []const []const u8 = &[_][]const u8{};
 pub const enable_tracy = false;
